fix link in about file
Signed-off-by: Gunnar Wagenknecht <gunnar@wagenknecht.org>

--- a/about.html
+++ b/about.html
@@ -28,11 +28,11 @@ terms and conditions of use.</p>
 
 <h4>Java API for RESTful Web Services (JAX-RS API)</h4>
 
-<p>Your use of the JAX-RS API code is subject to the terms and conditions of the Common Development and Distribution License 1.0.
+<p>Your use of the code is subject to the terms and conditions of the Common Development and Distribution License 1.0.
 A copy of the license is contained in the file <a href="about_files/CDDL-LICENSE.txt">CDDL-LICENSE.txt</a> and is also available at
 <a href="http://www.sun.com/cddl/cddl.html">http://www.sun.com/cddl/cddl.html</a>
 </p>
 
-<p>The source for the javax.ws.rs bundle is available on the JSR 311 Project at https://jsr311.dev.java.net/.</p>
+<p>The source for the bundle is available on the Jersey Project at http://jersey.java.net/.</p>
 
 </body></html>
